final committed changes

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,7 @@ USERNAME = sumocse2002
 PASSWORD = GnxB8qIqNHiEbsEJ
 MONGO_URI = "mongodb+srv://sumocse2002:GnxB8qIqNHiEbsEJ@cluster0.hbztg.mongodb.net/Node-Campus?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET = "sceret-11234"
+
+CLOUDINARY_CLOUD_NAME=dbuwt418i
+CLOUDINARY_API_KEY=233137346131358
+CLOUDINARY_SECRET_KEY=oVfvkEoMJqlI1adUgrBt3hPyKkQ
