--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.518.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.4.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
