--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "multer": "^2.0.0",
+    "multer-storage-cloudinary": "^4.0.0",
+    "socket.io": "^4.8.1"
   }
 }
